--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ uvicorn[standard]==0.34.0
 dishka==1.4.2
 langchain-text-splitters==0.3.6
 fastapi-restful==0.6.0
+typing-inspect==0.9.0
+pyaml_env==1.2.2
