--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,3 +2,35 @@
 name = "llm-text-processor"
 version = "1.0.0"
 description = "Text processor for AI agent embeddings"
+requires-python = ">=3.13.2"
+license = "GPL-3.0-or-later"
+authors = [
+    { name = "Andrey Ryabtsev" }
+]
+maintainers = [
+    { name = "Andrey Ryabtsev" }
+]
+dependencies = [
+    "fastapi[standard] >= 0.115.11",
+    "uvicorn[standard] >= 0.34.0",
+    "dishka >= 1.4.2",
+    "langchain-text-splitters>=0.3.6",
+    "fastapi-restful >= 0.6.0",
+    "typing-inspect >= 0.9.0",
+    "pyaml_env >= 1.2.2",
+    "pydantic >= 2.10.6",
+    "hatchling >= 1.27.0"
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+directory = "dist"
+include = [
+    "app"
+]
+
+[tool.hatch.envs.prod]
+dev-mode = false
