--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,18 +18,32 @@ dependencies = [
     "fastapi-restful >= 0.6.0",
     "typing-inspect >= 0.9.0",
     "pyaml_env >= 1.2.2",
-    "pydantic >= 2.10.6",
-    "hatchling >= 1.27.0"
+    "pydantic >= 2.10.6"
 ]
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling >= 1.27.0"]
 build-backend = "hatchling.build"
 
-[tool.hatch.build.targets.wheel]
+[tool.hatch.build]
 directory = "dist"
-include = [
+
+[tool.hatch.build.targets.sdist]
+packages = [
     "app"
+]
+exclude = [
+    ".gitignore",
+    ".higignore"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = [
+    "app"
+]
+exclude = [
+    ".gitignore",
+    ".hgignore"
 ]
 
 [tool.hatch.envs.prod]
