--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [project]
 name = "llm-text-processor"
-version = "1.0.0"
 description = "Text processor for AI agent embeddings"
 requires-python = ">=3.11.2"
 license = "GPL-3.0-or-later"
@@ -24,6 +23,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling >= 1.27.0"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+path = "app/__about__.py"
 
 [tool.hatch.build]
 directory = "dist"
