--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "llm-text-processor"
 description = "Text processor for AI agent embeddings"
 requires-python = ">=3.11.2"
 license = "GPL-3.0-or-later"
+dynamic = ["version"]
 authors = [
     { name = "Andrey Ryabtsev" }
 ]
