--- a/distrib/templates/deployment.yaml
+++ b/distrib/templates/deployment.yaml
@@ -113,54 +113,54 @@ spec:
               cpu: 250m
               memory: 512Mi
 
-#        - name: fluentbit
-#          image: fluent/fluent-bit:3.1.4
-#          resources:
-#            requests:
-#              cpu: 50m
-#              memory: 100Mi
-#            limits:
-#              cpu: 50m
-#              memory: 200Mi
-#          env:
-#            - name: POD_NAME
-#              valueFrom:
-#                fieldRef:
-#                  fieldPath: metadata.name
-#            - name: POD_NAMESPACE
-#              valueFrom:
-#                fieldRef:
-#                  fieldPath: metadata.namespace
-#            - name: POD_IP
-#              valueFrom:
-#                fieldRef:
-#                  fieldPath: status.podIP
-#            - name: NODE_NAME
-#              valueFrom:
-#                fieldRef:
-#                  fieldPath: spec.nodeName
-#          volumeMounts:
-#            - mountPath: /logs
-#              name: logs-volume
-#            - mountPath: /fluent-bit/etc
-#              name: fluentbit-config
-#              readOnly: true
-#            - mountPath: /fluent-bit/db
-#              name: fluentbit-db
-#          readinessProbe:
-#            httpGet:
-#              path: /api/v1/health
-#              port: 9090
-#            initialDelaySeconds: 20
-#            periodSeconds: 3
-#            failureThreshold: 10
-#          livenessProbe:
-#            httpGet:
-#              path: /api/v1/health
-#              port: 9090
-#            initialDelaySeconds: 25
-#            periodSeconds: 5
-#            failureThreshold: 10
+        - name: fluentbit
+          image: fluent/fluent-bit:3.1.4
+          resources:
+            requests:
+              cpu: 50m
+              memory: 100Mi
+            limits:
+              cpu: 50m
+              memory: 200Mi
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: POD_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: NODE_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.nodeName
+          volumeMounts:
+            - mountPath: /logs
+              name: logs-volume
+            - mountPath: /fluent-bit/etc
+              name: fluentbit-config
+              readOnly: true
+            - mountPath: /fluent-bit/db
+              name: fluentbit-db
+          readinessProbe:
+            httpGet:
+              path: /api/v1/health
+              port: 9090
+            initialDelaySeconds: 20
+            periodSeconds: 3
+            failureThreshold: 10
+          livenessProbe:
+            httpGet:
+              path: /api/v1/health
+              port: 9090
+            initialDelaySeconds: 25
+            periodSeconds: 5
+            failureThreshold: 10
 
         - name: vault-agent
           image: hashicorp/vault:1.18
