--- a/distrib/templates/configmaps/app-fluentbit.yaml
+++ b/distrib/templates/configmaps/app-fluentbit.yaml
@@ -57,6 +57,5 @@ data:
       Format        regex
       Regex         ^(?<time>[^ ]* {1,2}[^ ]*) \[(?<level>[^ ]*)\] \[(?<thread>[^ ]*)\] \[(?<module>[^ ]*)\] \[(?<source>[^ ]*)\] - (?<message>.*)$
       Time_Key      time
-      Time_Format   %Y-%m-%d %H:%M:%S,%L%z
+      Time_Format   %Y-%m-%d %H:%M:%S,%L
       Time_Keep     On
-      Time_Offset   +0300
