feat: #8 adds healthcheck endpoint logs filter to console logger

--- a/app/config/logging.yaml
+++ b/app/config/logging.yaml
@@ -15,6 +15,8 @@ handlers:
     formatter: default
     level: !ENV ${ROOT_LOG_LEVEL:DEBUG}
     stream: ext://sys.stdout
+    filters:
+      - healthcheck
   file:
     class: app.utils.custom_rotating_file_handler.CustomRotatingFileHandler
     formatter: default
