Feature/8 splitter params (#9)
* feat: #8 adds additional config params to recursive chunker

* feat: #8 adds healthcheck endpoint logs filter

* feat: #8 adds healthcheck endpoint logs filter to console logger

* fix: #8 fixes envs writing to file

--- a/app/config/logging.yaml
+++ b/app/config/logging.yaml
@@ -5,12 +5,18 @@ formatters:
     format: '%(asctime)s [%(levelname)s] [%(threadName)s] [%(module)s] [%(filename)s] - %(message)s'
     use_colors: true
 
+filters:
+  healthcheck:
+    (): app.utils.healthcheck_filter.HealthcheckFilter
+
 handlers:
   console:
     class: logging.StreamHandler
     formatter: default
     level: !ENV ${ROOT_LOG_LEVEL:DEBUG}
     stream: ext://sys.stdout
+    filters:
+      - healthcheck
   file:
     class: app.utils.custom_rotating_file_handler.CustomRotatingFileHandler
     formatter: default
@@ -19,6 +25,8 @@ handlers:
     encoding: utf-8
     backupCount: 3
     level: !ENV ${ROOT_LOG_LEVEL:TRACE}
+    filters:
+      - healthcheck
 
 root:
   level: !ENV ${ROOT_LOG_LEVEL:TRACE}
